[project]
name = "recipes-llm"
version = "0.1.0"
description = "LLM for Recipes"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard]>=0.137.2",
    "motor>=3.7.1",
    "openai>=2.43.0",
    "pip>=26.1.2",
    "pydantic>=2.13.4",
    "pymongo[srv]>=4.17.0",
    "python-dotenv>=1.2.2",
    "uvicorn>=0.49.0",
]
